# fridge-scan

./: .dockerignore  .env.example  .gitignore  Dockerfile  Fridge.ipynb  Makefile  README.md  main.py  pyproject.toml
src/: detect_food_gpt_vision.py  generate_recipes.py  main.py  process_image.py  process_image_openai.py  upload_image_to_site.py
templates/: display_result.html  take_picture_form.html  upload_form.html
terraform/: main.tf
